# permanentum

./: DOCS.md  README.md  docker-compose.yml  example.env
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: imgproxy.yml  tools-integrations.yml
boost/: Dockerfile  get-offers.sh  mainnet-miners.addr
fil-miners/: Dockerfile  LICENSE  README.md  fil-miners.cabal
fil-miners/app/: Main.hs
fil-miners/lib/: Constraints.hs  CoreTypes.hs  Filrep.hs  FilrepApi.hs  LangUtil.hs  SpDb.hs
fil-miners/resources/db/migrations/: V1.0.0-db-init.sql
fil-miners/resources/db/queries/: list-tables.sql  persist-miners.sql
fil-miners/resources/test/: miners-50.json
fil-miners/test/: FilrepTest.hs
indexer/: Dockerfile  daemon.toml  entrypoint.sh
ipfs/: Dockerfile  config-webui.sh  permanentum-config.sh
lotus/: Dockerfile  entrypoint.sh
ops/scripts/: get-miners.sh  mksecrets.sh  store-cid-cli.sh
plutus/: cabal.project
plutus/PermanentumSC/: PermanentumSC.cabal
plutus/PermanentumSC/src/: Permanentum.hs
plutus/PermanentumSC/test/: TPermanentum.hs
