cabal-version:      3.4

name:               fil-miners
version:            0.1.0.0

synopsis:
    Filecoin Miner Information

description:
    Scrapes Filrep.io, populates the fil-sp-db and provides a JSON API to query
    miners

homepage: https://permanentum.io

license:            MIT
license-file:       LICENSE
author:             kiriakos
maintainer:         kiriakos@evolute.software

copyright:          Evolute Software
category:           Web



library
    exposed-modules:
        , Filrep
        , FilrepApi
        , SpDb
        , CoreTypes
    hs-source-dirs: lib
    default-language: Haskell2010
    build-depends:
        , base              ^>= 4.16.4.0
        , text              ^>= 2.0.2
        , timers            ^>= 0.2.0.4
        , suspend           ^>= 0.2.0.0
        , unix              ^>= 2.7.2.2
        , containers        ^>= 0.6.5.1
        , aeson             ^>= 2.1.2.1
        , http-client-tls   ^>= 0.3.6.2
        , servant           ^>= 0.20
        , servant-client    ^>= 0.20
        , scientific        ^>= 0.3.7.0
        , postgresql-simple ^>= 0.7.0.0
        , postgresql-migration ^>=0.2.1.6
        , file-embed        ^>= 0.0.15.0
        , filepath          ^>= 1.4.2.2
        , bytestring        ^>= 0.11.5.2
        , utf8-string       ^>= 1.0.2
        , regex-tdfa        ^>= 1.3.2

executable fil-miners-exe
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        , base            ^>= 4.16.4.0
        , suspend         ^>= 0.2.0.0
        , text            ^>= 2.0.2
        , timers          ^>= 0.2.0.4
        , unix            ^>= 2.7.2.2
        , fil-miners

test-suite filrep-api-tests
    type:       exitcode-stdio-1.0
    main-is:    FilrepTest.hs
    hs-source-dirs:   test
    build-depends:
        , base            ^>= 4.16.4.0
        , bytestring      ^>= 0.11.4.0
        , aeson           ^>= 2.1.2.1
        , fil-miners
